--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -1,5 +1,14 @@
-# Sample localization file for English. Add more files in this directory for other locales.
-# See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
-
 en:
-  hello: "Hello world"
+   accession:
+      accession_date: Accession Date
+      accession_id: Identifier
+      accession_id_0: Identifier
+      content_description: Content Description
+      condition_description: Condition Description
+      publish: Publish?
+      publish_help: Check this if you wish to publish this accession to the public.
+      restrictions: Restrictions?
+      title: Title
+   repository:
+      repo_id: Repository Id
+      description: Description
