clean up controllers (remove inline checks when only inline is used); fix new AO selection in tree and setting of Finish URI;

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -12,6 +12,7 @@ en:
    archival_object:
       title: Title
       id_0: Identifier
+      "[:id_0, :id_1, :id_2, :id_3]": Identifier
    collection:
       title: Title
    repository:
