add basic create, edit, show, list behaviour for subjects

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -19,3 +19,6 @@ en:
    repository:
       repo_code: Repository code
       description: Description
+   subject:
+      term: Term
+      term_type: Type
