change AO UI to use ref_id instead of the four part id

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -11,9 +11,8 @@ en:
       title: Title
    archival_object:
       title: Title
-      id_0: Identifier
-      "[:id_0, :id_1, :id_2, :id_3]": Identifier
-      identifier: Identifier
+      ref_id: Ref ID
+      "[:collection_id, :ref_id]": Ref ID
    collection:
       title: Title
    repository:
