Reworked the user creation and authentication system.
  * Now have a JSONModel for users, living at /users.  POST to /users to create
    a user and set their password, POST to /users/:username/login to
    authenticate.

  * Added a new form to the frontend for account creation, and a link from the
    "Sign in" dropdown to let people self-register.

  * Modified the DB schema for users to match the JSON schema.

  * Reworked the unit tests to support the new URL scheme.

  * Selenium tests

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -25,3 +25,9 @@ en:
    subject:
       term: Term
       term_type: Type
+   createuser:
+      username: Username
+      name: Your full name
+      password: Password
+      confirm_password: Confirm your password
+      passwords: Passwords
