WIP refactoring form helper to not use the rails form helpers

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -15,21 +15,21 @@ en:
     agent_corporation: Corporate Body
     agent_family: Family
     agent_software: Software
-  agent[names]:
-      authority_id: Authority ID
-      primary_name: Primary Name
-      prefix: Prefix
-      title: Title
-      rest_of_name: Rest of Name
-      suffix: Suffix
-      fuller_form: Fuller Form      
-      number: Number
-      dates: Dates
-      qualifier: Qualifier
-      sort_name: Sort Name
-      description_type: Description Type
-      description_note: Description Note
-      description_citation: Description Citation
+  name_person:
+    authority_id: Authority ID
+    primary_name: Primary Name
+    prefix: Prefix
+    title: Title
+    rest_of_name: Rest of Name
+    suffix: Suffix
+    fuller_form: Fuller Form      
+    number: Number
+    dates: Dates
+    qualifier: Qualifier
+    sort_name: Sort Name
+    description_type: Description Type
+    description_note: Description Note
+    description_citation: Description Citation
   archival_object:
     title: Title
     ref_id: Ref ID
