add form for family agent; add prefix to family name schema;

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -30,6 +30,7 @@ en:
       description_type: Description Type
       description_note: Description Note
       description_citation: Description Citation
+      family_name: Family Name
     agent_contacts:
       name: Contact Description
       salutation: Salutation
