Make translation keys a little more robust
  * Added a custom i18n error handler that chops out some common bits that stop translation keys from matching (like array syntax).

  * Modified en.yml to reuse attributes for the different agent types.

  * Removed i18n_name from form_helper.rb since that's now covered by the custom exception handler.

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -9,7 +9,7 @@ en:
     publish_help: Check this if you wish to publish this accession to the public.
     restrictions: Restrictions?
     title: Title
-  agent:
+  agent: &agent_attributes
     type: Agent Type
     agent_type:
       agent_family: Family
@@ -54,6 +54,14 @@ en:
       telephone_ext: Telephone Ext.
       fax: Fax Number
       email: Email Address
+  agent_person:
+    <<: *agent_attributes
+  agent_family:
+    <<: *agent_attributes
+  agent_corporate_entity:
+    <<: *agent_attributes
+  agent_software:
+    <<: *agent_attributes
   archival_object:
     title: Title
     ref_id: Ref ID
