--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -33,13 +33,22 @@ en:
       description_citation: Description Citation
       family_name: Family Name
       direct_order: Direct Order
-      standard: Primary Name, Rest of Name
-      inverted: Rest of Name _ Primary Name
+      direct_order_standard: Primary Name, Rest of Name
+      direct_order_inverted: Rest of Name _ Primary Name
       subordinate_name_1: Subordinate Name 1
       subordinate_name_2: Subordinate Name 2
       software_name: Software Name
       version: Version
       manufacturer: Manufacturer
+      source: Source
+      source_local: Local sources (local)
+      source_naf: NACO Authority File (naf)
+      source_nad: NAD / ARK II Name Authority Database (nad)
+      source_ulan: Union List of Artist Names (ulan)
+      rules: Rules
+      rules_local: Local rules (local)
+      rules_aacr: Anglo-American Cataloging Rules (aacr)
+      rules_dacs: "Describing Archives: A Content Standard (dacs)"
     agent_contacts:
       name: Contact Description
       salutation: Salutation
