--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -95,6 +95,10 @@ en:
     "[:resource_id, :ref_id]": Ref ID
     extents:
       <<: *extent_attributes
+  group:
+    group_code: Group code
+    description: Group description
+    members: Group members
   resource:
     title: Title
     id_0: Identifier
