Add and endpoint that shows all repository-level permissions.
The frontend now uses this to display the list of available permissions when managing groups.

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -99,8 +99,11 @@ en:
       <<: *extent_attributes
   group:
     group_code: Group code
-    description: Group description
-    members: Group members
+    description: Description
+    members: Members
+    permissions: "Members can:"
+    permission_types:
+        manage_repository: manage this repository
   resource:
     title: Title
     id_0: Identifier
