UI changes to only show repositories to users that they can access.
Also added some extra translations for the new permission types.

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -103,7 +103,9 @@ en:
     members: Members
     permissions: "Members can:"
     permission_types:
-        manage_repository: manage this repository
+        manage_repository: manage this repository (change groups and other settings)
+        update_repository: create/modify/delete records in this repository
+        view_repository: view the records in this repository
   resource:
     title: Title
     id_0: Identifier
