Add external documents to subject form; Clean up subject form to match other layouts -- include the sidebar etc

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -166,6 +166,8 @@ en:
   subject:
     term: Term
     term_type: Type
+    external_documents:
+      <<: *external_document_attributes
   createuser:
     username: Username
     name: Your full name
