--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -1,4 +1,26 @@
 en:
+  rights_statement: &rights_statement_attributes
+    identifier: Identifier
+    rights_type: Rights Type
+    rights_type_intellectual_property: Intellectual Property
+    rights_type_license: License
+    rights_type_statute: Statute
+    rights_type_institutional_policy: Institutional Policy
+    materials: Materials
+    ip_status: IP Status
+    ip_status_copyrighted: Copyrighted
+    ip_status_public_domain: Public Domain
+    ip_status_unknown: Unknown
+    ip_expiration_date: IP Expiration Date
+    license_identifier_terms: License Identifier Terms
+    statute_citation: Statute Citation
+    jurisdiction: Jurisdiction
+    type_note: Type Note
+    permissions: Permissions
+    restrictions: Restrictions
+    restriction_start_date: Restrictions Start Date
+    restriction_end_date: Restrictions End Date
+    granted_note: Granted Note
   extent: &extent_attributes
     portion: Portion
     portion_whole: Whole
@@ -65,6 +87,8 @@ en:
       <<: *date_attributes
     _external_documents:
       <<: *external_document_attributes
+    rights_statements:
+      <<: *rights_statement_attributes
   agent: &agent_attributes
     type: Agent Type
     agent_type:
@@ -139,6 +163,8 @@ en:
       <<: *date_attributes
     _external_documents:
       <<: *external_document_attributes
+    rights_statements:
+      <<: *rights_statement_attributes
   group:
     group_code: Group code
     description: Description
@@ -161,6 +187,8 @@ en:
       <<: *date_attributes
     _external_documents:
       <<: *external_document_attributes
+    rights_statements:
+      <<: *rights_statement_attributes
   repository:
     repo_code: Repository code
     description: Description
