--- a/migrations/TODO.txt
+++ b/migrations/TODO.txt
@@ -1,6 +1,17 @@
+- why are titles getting passed in twice?
+
+
+- fix problem of ambiguity of multiple possible property setters:
+	- restore 'set once' rule, or
+	- destroy and xpath array after a single value property gets set
 
 - create helper methods to render reports and other messages
 	appropriate for context (HTML, CLI, etc.)
+	
+- address problem of circular waiting among json objects
+	- write the test (a -b -c)
+	- http://en.wikipedia.org/wiki/Dependency_graph
+	- http://en.wikipedia.org/wiki/Cycle_detection_(graph_theory)
 
 - validate XML files against schema (using libxml)
 	- where to do this?
@@ -22,8 +33,6 @@
 - refactor ancestor relationships setter
 
 - change 'path' to 'key' in import.rb CLI for crosswalk option
-
-- replace importer directory load in CLI with ASpaceImport::init
 
 - add init options to ASpaceImport module
 	- perhaps allow loaded importers to be restricted (i.e., xml only for webapps)
