Refactor AO, Groups, Repo and User forms to use new form helper

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -327,7 +327,7 @@ en:
       <<: *term_attributes
     _external_documents:
       <<: *external_document_attributes
-  createuser:
+  user:
     username: Username
     name: Your full name
     password: Password
