--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -1,4 +1,22 @@
 en:
+  location:
+    temporary: Temporary
+    temporary_conservation: Conservation
+    temporary_exhibit: Exhibit
+    temporary_loan: Loan
+    temporary_reading_room: Reading Room
+    building: Building
+    floor: Floor
+    room: Room
+    area: Area
+    barcode: Barcode
+    classification: Classification
+    coordinate_1_label: Coordinate Label 1
+    coordinate_1_indicator: Coordinate Indicator 1
+    coordinate_2_label: Coordinate Label 2
+    coordinate_2_indicator: Coordinate Indicator 2
+    coordinate_3_label: Coordinate Label 3
+    coordinate_3_indicator: Coordinate Indicator 3
   agent_person_name:
     authority_id: Authority ID
     source: Source
