Fix removal of locations on update (ASModel) and added readonly view for container and container locations

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -24,6 +24,7 @@ en:
     start_date: Start Date
     end_date: End Date
     note: Note
+    location: Location
     _html:
       singular: Location
       plural: Locations
